--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="container" data-aos="zoom-out-up">
         
         <div class="img__center">
-            <img class="animate__animated animate__backInDown pics" src="/Images/salman_pic1.png" alt="">
+            <img class="animate__animated animate__backInDown pics" src="/Images/image_me.png" alt="">
         </div>
         <div class="profile">
             <div class="self__bio">
